--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "@repo/ui": "*",
     "next": "^15.2.1",
     "react": "^19.0.0",
@@ -24,6 +25,7 @@
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@repo/db": "*",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.22.0",
     "postcss": "^8.5.3",
