--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -1,11 +1,11 @@
 name: Deploy the backend
 on:
   push:
-    branch: [production]
+    branches: [production]
 
 jobs:
   build:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@2
@@ -13,8 +13,8 @@ jobs:
       - name: Docker login
         uses: docker/login-action@2
         with:
-          username: ${{secret.DOCKERHUB_USERNAME}}
-          password: ${{secret.DOCKERHUB_PASSWORD}}
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_PASSWORD}}
 
       - name: build and push
         uses: docker/build-push-action@v4
