--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -32,5 +32,6 @@ jobs:
           sudo docker ps -a
           sudo docker stop http-backend 
           sudo docker rm http-backend
-          sudo docker run --name http-backend  -p 8080:8080 -d rahulpal388/deploy-httpbackend:${{secrets.sha}}
+          echo ${{secrets.sha}}
+          sudo docker run --name http-backend -p 8080:8080 -d rahulpal388/deploy-httpbackend:${{secrets.sha}}
           EOF
