--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -28,10 +28,10 @@ jobs:
           echo "${{secrets.VM_PRIVATEKEY}}" &> ~/ssh_key
           chmod 700 /home/runner/ssh_key
           ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@43.204.149.125 << 'EOF'
-          sudo docker pull rahulpal388/deploy-httpbackend:${{secrets.sha}}
+          sudo docker pull rahulpal388/deploy-httpbackend:${{github.sha}}
           sudo docker ps -a
           sudo docker stop http-backend 
           sudo docker rm http-backend
-          echo ${{secrets.sha}}
-          sudo docker run --name http-backend -p 8080:8080 -d rahulpal388/deploy-httpbackend:${{secrets.sha}}
+          echo ${{github.sha}}
+          sudo docker run --name http-backend -p 8080:8080 -d rahulpal388/deploy-httpbackend:${{github.sha}}
           EOF
